Fix bug on mobile navigation, (body element overly not being remove when navigating to a different page from the mobile nav component )

--- a/components/mobile-nav/MobileNav.module.css
+++ b/components/mobile-nav/MobileNav.module.css
@@ -11,8 +11,8 @@
 	padding: 3rem 2rem;
 	font-size: 0.75rem;
 	width: 70%;
-	transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
 .logo {
 	display: flex;
 	align-items: center;
